--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
-    "ejs": "~2.6.1",
+    "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
-    "express": "~4.16.1",
+    "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
     "http-errors": "~1.6.3",
+    "luxon": "^3.4.4",
     "mongoose": "^8.3.0",
     "morgan": "~1.9.1",
     "postcss": "^8.4.38",
@@ -30,7 +31,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
     "gulp": "^5.0.0",
-    "gulp-nodemon": "^2.5.0",
+    "gulp-nodemon": "^2.2.1",
     "gulp-postcss": "^10.0.0",
     "gulp-rename": "^2.0.0",
     "nodemon": "^3.1.0",
