--- a/package.json
+++ b/package.json
@@ -19,10 +19,13 @@
     "ejs-mate": "^4.0.0",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
+    "express-session": "^1.18.0",
     "http-errors": "~1.6.3",
     "luxon": "^3.4.4",
     "mongoose": "^8.3.0",
     "morgan": "~1.9.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3"
   },
