--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build-css": "postcss public/stylesheets/style.css -o public/stylesheets/output.css"
   },
   "dependencies": {
+    "@clerk/clerk-js": "^4.71.4",
     "@mdi/font": "^7.4.47",
     "autoprefixer": "^10.4.19",
     "cookie-parser": "~1.4.4",
