--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@clerk/clerk-js": "^4.71.4",
+    "@clerk/clerk-sdk-node": "^4.13.14",
     "@mdi/font": "^7.4.47",
     "autoprefixer": "^10.4.19",
     "cookie-parser": "~1.4.4",
