--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/clerk-sdk-node": "^4.13.14",
     "@mdi/font": "^7.4.47",
     "autoprefixer": "^10.4.19",
+    "connect-mongo": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
@@ -28,6 +29,8 @@
     "morgan": "~1.9.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.3"
   },
