--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/clerk-sdk-node": "^4.13.14",
     "@mdi/font": "^7.4.47",
     "autoprefixer": "^10.4.19",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
